[gd_scene load_steps=5 format=3 uid="uid://criwplha3f8dp"]

[ext_resource type="Script" path="res://hud.gd" id="1_4qqye"]
[ext_resource type="FontVariation" uid="uid://def6vgtce3l6s" path="res://fonts/NES.tres" id="2_x5iu1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0g3jy"]
bg_color = Color(0.894118, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l54k0"]
bg_color = Color(0.0901961, 1, 0.172549, 1)
border_width_left = 2
border_width_top = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_4qqye")

[node name="PlayerPanel" type="Panel" parent="."]
offset_right = 130.0
offset_bottom = 20.0

[node name="HealthBar" type="ProgressBar" parent="PlayerPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_0g3jy")
theme_override_styles/fill = SubResource("StyleBoxFlat_l54k0")
value = 50.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="PlayerPanel/HealthBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -11.5
offset_right = 37.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_x5iu1")
theme_override_font_sizes/font_size = 18
text = "HP: 25/50"
horizontal_alignment = 1
vertical_alignment = 1
